--- a/app/src/main/res/layout/activity_2.xml
+++ b/app/src/main/res/layout/activity_2.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivity">
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/editTextFabricante"
         android:layout_width="wrap_content"
         android:layout_height="54dp"
         android:layout_alignParentEnd="true"
