Ativities e ações de botoes todos criados e a funcionar! validações tambem traducao para ENG tambem

--- a/app/src/main/res/layout/activity_2.xml
+++ b/app/src/main/res/layout/activity_2.xml
@@ -20,7 +20,7 @@
         android:textSize="22sp" />
 
     <Button
-        android:id="@+id/buttonPesquisar"
+        android:id="@+id/buttonSave"
         android:layout_width="103dp"
         android:layout_height="59dp"
         android:layout_alignParentEnd="true"
