--- a/app/src/main/res/layout/activity_2.xml
+++ b/app/src/main/res/layout/activity_2.xml
@@ -4,102 +4,196 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorAccent"
     tools:context=".MainActivity">
 
+
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="331dp"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="280dp"
-            android:layout_height="41dp"
-            android:layout_marginEnd="129dp"
-            android:layout_marginRight="129dp"
-            android:layout_marginBottom="571dp"
-            android:text="@string/fabricante_e_modelo"
-            android:textSize="22sp" />
-
-    </LinearLayout>
-
-
-    <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginTop="0dp"
-        android:layout_marginEnd="0dp"
-        android:layout_marginRight="0dp"
-        android:layout_marginBottom="400dp">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="66dp"
+            android:orientation="horizontal">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/TextInputLayoutMarca"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/textView10"
+                android:layout_width="300dp"
+                android:layout_height="60dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="5dp"
+                android:text="@string/please_enter_the_details_of_the_new_car"
+                android:textSize="22sp" />
+        </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="244dp"
+            android:baselineAligned="false"
+            android:orientation="horizontal">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/TextInputLayoutModelo"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+            <LinearLayout
+                android:layout_width="75dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/TextInputLayoutLotacao"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                <TextView
+                    android:id="@+id/textView"
+                    android:layout_width="91dp"
+                    android:layout_height="40dp"
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/TextInputLayoutTracao"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                    android:layout_marginStart="60dp"
+                    android:layout_marginLeft="60dp"
+                    android:layout_marginTop="22dp"
+                    android:text="@string/marca"
+                    android:textSize="22sp"
+                    app:layout_constraintBaseline_toBaselineOf="@+id/TextInputLayoutMarca"
+                    app:layout_constraintStart_toStartOf="parent" />
 
+                <TextView
+                    android:id="@+id/textView6"
+                    android:layout_width="91dp"
+                    android:layout_height="40dp"
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/TextInputLayoutPeso"
-                android:layout_width="match_parent"
-                android:layout_height="52dp" />
+                    android:layout_marginStart="60dp"
+                    android:layout_marginLeft="60dp"
+                    android:text="@string/modelo"
+                    android:textSize="22sp"
+                    app:layout_constraintBaseline_toBaselineOf="@+id/TextInputLayoutModelo"
+                    app:layout_constraintStart_toStartOf="parent" />
+
+                <TextView
+                    android:id="@+id/textView7"
+                    android:layout_width="91dp"
+                    android:layout_height="40dp"
+
+                    android:layout_marginStart="60dp"
+                    android:layout_marginLeft="60dp"
+                    android:baselineAligned="false"
+                    android:text="@string/peso"
+                    android:textSize="22sp"
+                    app:layout_constraintBaseline_toBaselineOf="@+id/TextInputLayoutPeso"
+                    app:layout_constraintStart_toStartOf="parent" />
+
+                <TextView
+                    android:id="@+id/textView8"
+                    android:layout_width="91dp"
+                    android:layout_height="40dp"
+
+                    android:layout_marginStart="60dp"
+                    android:layout_marginLeft="60dp"
+                    android:text="@string/lota_o"
+                    android:textSize="22sp"
+                    app:layout_constraintBaseline_toBaselineOf="@+id/TextInputLayoutLotacao" />
+
+                <TextView
+                    android:id="@+id/textView9"
+                    android:layout_width="91dp"
+                    android:layout_height="40dp"
+
+                    android:layout_marginStart="60dp"
+                    android:layout_marginLeft="60dp"
+                    android:layout_marginBottom="100dp"
+                    android:text="@string/tra_o"
+                    android:textSize="22sp"
+                    app:layout_constraintBaseline_toBaselineOf="@+id/TextInputLayoutTracao2"
+                    app:layout_constraintStart_toStartOf="parent" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="178dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/TextInputLayoutMarca"
+                    android:layout_width="205dp"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="20dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/TextInputLayoutModelo"
+                    android:layout_width="205dp"
+                    android:layout_height="40dp"
+
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/TextInputLayoutPeso"
+                    android:layout_width="205dp"
+                    android:layout_height="40dp"
+
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/TextInputLayoutLotacao"
+                    android:layout_width="205dp"
+                    android:layout_height="40dp"
+
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/TextInputLayoutTracao2"
+                    android:layout_width="205dp"
+                    android:layout_height="40dp"
+
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/buttonSaveNovo"
+                android:layout_width="103dp"
+                android:layout_height="59dp"
+
+                android:layout_marginStart="80dp"
+                android:layout_marginLeft="80dp"
+                android:background="@android:color/background_dark"
+                android:text="@string/save"
+                android:textColor="@color/colorAccent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <Button
+                android:id="@+id/buttonCancelar"
+                android:layout_width="103dp"
+                android:layout_height="60dp"
+
+                android:background="@android:color/background_dark"
+                android:layout_marginStart="40dp"
+                android:layout_marginLeft="40dp"
+                android:text="@string/cancelar"
+                android:textColor="@color/colorAccent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                tools:background="@android:color/background_dark" />
 
         </LinearLayout>
 
-    </com.google.android.material.textfield.TextInputLayout>
+        <ListView
+            android:id="@+id/ListViewCarros"
+            android:layout_width="match_parent"
+            android:layout_height="188dp"
+            android:layout_margin="20dp"
+            android:background="@color/colorAccent" />
 
-    <ListView
-        android:id="@+id/ListViewCarros"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="331dp"/>
-
-    <Button
-        android:id="@+id/buttonSaveNovo"
-        android:layout_width="103dp"
-        android:layout_height="59dp"
-        android:layout_marginEnd="66dp"
-        android:layout_marginRight="66dp"
-        android:layout_marginBottom="143dp"
-        android:layout_marginTop="280dp"
-        android:text="@string/save"
-
-        />
-
-    <Button
-        android:id="@+id/buttonCancelar"
-        android:layout_width="103dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="67dp"
-        android:layout_marginLeft="67dp"
-        android:layout_marginEnd="242dp"
-        android:layout_marginRight="242dp"
-        android:layout_marginBottom="144dp"
-        android:layout_marginTop="280dp"
-        android:text="@string/cancelar" />
+    </LinearLayout>
 
 
 </RelativeLayout>
