--- a/app/src/main/res/layout/activity_6.xml
+++ b/app/src/main/res/layout/activity_6.xml
@@ -165,7 +165,7 @@
                 android:layout_marginStart="80dp"
                 android:layout_marginLeft="80dp"
                 android:background="@android:color/background_dark"
-                android:text="@string/save"
+                android:text="@string/edit"
                 android:textColor="@color/colorAccent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
@@ -175,10 +175,10 @@
                 android:layout_width="103dp"
                 android:layout_height="60dp"
 
-                android:background="@android:color/background_dark"
                 android:layout_marginStart="40dp"
                 android:layout_marginLeft="40dp"
-                android:text="@string/cancelar"
+                android:background="@android:color/background_dark"
+                android:text="Eliminar"
                 android:textColor="@color/colorAccent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
