--- a/app/src/main/res/layout/activity_4.xml
+++ b/app/src/main/res/layout/activity_4.xml
@@ -1,16 +1,180 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:background="@color/colorAccent"
+tools:context=".Activity5">
+
+
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Activity 4"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="66dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView10"
+            android:layout_width="300dp"
+            android:layout_height="60dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="5dp"
+            android:text="Please enter detail of the new moto:"
+            android:textSize="22sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="244dp"
+        android:baselineAligned="false"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="75dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="91dp"
+                android:layout_height="40dp"
+
+                android:layout_marginStart="60dp"
+                android:layout_marginLeft="60dp"
+                android:layout_marginTop="22dp"
+                android:text="@string/marca"
+                android:textSize="22sp"
+                app:layout_constraintBaseline_toBaselineOf="@+id/TextInputLayoutMarca"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="91dp"
+                android:layout_height="40dp"
+
+                android:layout_marginStart="60dp"
+                android:layout_marginLeft="60dp"
+                android:text="@string/modelo"
+                android:textSize="22sp"
+                app:layout_constraintBaseline_toBaselineOf="@+id/TextInputLayoutModelo"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <TextView
+                android:id="@+id/textView8"
+                android:layout_width="111dp"
+                android:layout_height="40dp"
+
+                android:layout_marginStart="60dp"
+                android:layout_marginLeft="60dp"
+                android:text="@string/cilindrada"
+                android:textSize="22sp"
+                app:layout_constraintBaseline_toBaselineOf="@+id/TextInputLayoutLotacao" />
+
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="91dp"
+                android:layout_height="40dp"
+
+                android:layout_marginStart="60dp"
+                android:layout_marginLeft="60dp"
+                android:baselineAligned="false"
+                android:text="@string/peso"
+                android:textSize="22sp"
+                app:layout_constraintBaseline_toBaselineOf="@+id/TextInputLayoutPeso4"
+                app:layout_constraintStart_toStartOf="parent" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="178dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/TextInputLayoutMarca4"
+                android:layout_width="205dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="20dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/TextInputLayoutModelo4"
+                android:layout_width="205dp"
+                android:layout_height="40dp"
+
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/TextInputLayoutCilindrada4"
+                android:layout_width="205dp"
+                android:layout_height="40dp"
+
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/TextInputLayoutPeso4"
+                android:layout_width="205dp"
+                android:layout_height="40dp"
+
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/buttonSave3"
+            android:layout_width="103dp"
+            android:layout_height="59dp"
+
+            android:layout_marginStart="80dp"
+            android:layout_marginLeft="80dp"
+            android:background="@android:color/background_dark"
+            android:text="@string/save"
+            android:textColor="@color/colorAccent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <Button
+            android:id="@+id/buttonCancelar3"
+            android:layout_width="103dp"
+            android:layout_height="60dp"
+
+            android:background="@android:color/background_dark"
+            android:layout_marginStart="40dp"
+            android:layout_marginLeft="40dp"
+            android:text="@string/cancelar"
+            android:textColor="@color/colorAccent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:background="@android:color/background_dark" />
+
+    </LinearLayout>
+
+    <ListView
+        android:id="@+id/ListViewMotas2"
+        android:layout_width="match_parent"
+        android:layout_height="188dp"
+        android:layout_margin="20dp"
+        android:background="@color/colorAccent" />
+
+</LinearLayout>
+
 
 </RelativeLayout>
