--- a/app/src/main/res/layout/activity_menu_carros.xml
+++ b/app/src/main/res/layout/activity_menu_carros.xml
@@ -8,6 +8,26 @@
     tools:context=".MenuCarros">
 
     <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:layout_marginBottom="212dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
+        tools:layout_editor_absoluteX="0dp">
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="150dp"
+            android:layout_marginTop="150dp"
+            android:text="@string/carros"
+            android:textSize="50sp"
+            android:textStyle="bold|italic" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="411dp"
         android:layout_height="457dp"
         android:layout_marginBottom="272dp"
@@ -28,13 +48,13 @@
     <LinearLayout
         android:layout_width="411dp"
         android:layout_height="148dp"
-        android:layout_marginTop="456dp"
+        android:layout_marginTop="510dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <Button
-            android:id="@+id/buttonAdd"
+            android:id="@+id/buttonAdicionar2"
             android:layout_width="140dp"
             android:layout_height="50dp"
             android:layout_marginLeft="40dp"
